--- a/notes/course_notes.tex
+++ b/notes/course_notes.tex
@@ -5,7 +5,7 @@
 %% DOCUMENT
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title{\textsc{ \normalsize INMA2111 Discrete mathematics II : Algorithms and complexity} \\ Course notes  \vspace{0.5cm} \hrule height 1pt}
-\author{Cyril de Bodt, Dounia Mulders}
+\author{Cyril de Bodt, Dounia Mulders, Mélanie Sedda}
 
 
 \begin{document}
@@ -17,7 +17,7 @@
 %\tableofcontents
 
 \input{./CM1}
-% Cyril de Bodt et Dounia Mulders
+\input{./CM7}
 
 
 \end{document}
